--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
 </head>
 
 <body>
-
+    <header class="header">
+        <div class="contenedor contenido-header">
+            <h1>Techno & EDM Festival</h1>
+            <nav class="navegacion-principal">
+                <a href="#">Lineup</a>
+                <a href="#">Galeria</a>
+                <a href="#">Tickets</a>
+            </nav>
+        </div>
+    </header>
 </body>
 
 </html>
