--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
             </nav>
         </div>
     </header>
+    
+    <div class="video">
+        <div class="overlay">
+            <div class="contenedor contenido-video">
+                <h2>Techno & EDM Festival</h2>
+                <p>Julio 2025, Buenos Aires, Argentina</p>
+            </div>
+        </div>
+        <video autoplay muted loop>
+            <source src="video/dj.mp4" type="video/mp4"/>
+            <source src="video/dj.ogv" type="video/ogg"/>
+            <source src="video/dj.webm" type="video/webm"/>
+        </video>
+    </div>
+
 </body>
 
 </html>
