aprendiendo mixins dinamicos e inteligentes

--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
         </video>
     </div>
 
+    <section class="sobre-festival">
+        <div class="imagen">
+            <img src="src/img/imagen_dj.jpg" alt="Sobre Festival">
+        </div>
+        <div class="contenido-festival">
+            <h2>Techno & EDM Festival</h2>
+            <p class="fecha">Julio 2025, Buenos Aires, Argentina</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam sapiente sint voluptates, pariatur inventore quibusdam delectus quo harum incidunt dolorum accusamus porro iste ut facilis officia maiores!</p>
+        </div>
+    </section>
+
 </body>
 
 </html>
