--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <p>Techno & EDM Festival. Todos los derechos reservados.</p>
+    </footer>
+
 </body>
 
 </html>
